# onnx-codegen

./: .gitignore  PULP_BUILTINS_CONFIG.md  README.md  float_unpruned.onnx  pyproject.toml
src/onnx_codegen/: cli.py  core.py  renderer.py
src/onnx_codegen/templates/: kernels_c.mako  kernels_h.mako  model_c.mako  model_h.mako  pulp_builtins_asm.h.inc  pulp_builtins_config.h.inc  runtime_helpers.c.inc  runtime_helpers_quant.c.inc  test_data_h.mako  weights_h.mako
